Ran Android Lint and fixed a few minor complaints.